--- a/src/App/style.css
+++ b/src/App/style.css
@@ -44,8 +44,8 @@ select{
 }
 :root {
     --offset: 72px;
-    --green: #1aab48;
-    --blue: #00acff;
+    --green: #3C2679;
+    --blue: #CD6932;
 }
 body {
     margin: 0;
