--- a/src/components/Calculator/style.css
+++ b/src/components/Calculator/style.css
@@ -2,7 +2,7 @@
 @media screen and (min-width: 901px) {
     .calculator {
         box-sizing: border-box;
-        background: var(--green);
+        background: linear-gradient(90deg, var(--green) 0%,rgba(121,9,88,1) 57%, var(--blue) 100%);
         height: 400px;
         padding: 48px var(--offset);
     }
