--- a/src/components/CardOffer/style.css
+++ b/src/components/CardOffer/style.css
@@ -3,8 +3,9 @@
     position: relative;
     box-sizing: border-box;
     padding: 32px 0 8px 48px;
-    width: 100%;
-    height: 270px;
+    width: 90%;
+    margin: 0 auto;
+    height: 290px;
     background: linear-gradient(90deg, rgba(226,217,226,0.63) 0%, rgba(234,234,234,0) 100%);
     border-radius: 8px;
     margin-bottom: 24px;
@@ -14,8 +15,8 @@
 
 .offerCard > .logotype {
     width: 285px;
-    height: 180px;
-    border-radius: 15px;
+    height: 179px;
+    border-radius: 16px;
     box-shadow: -2px 2px 7px -2px black;
     background-size: contain;
     position: absolute;
@@ -65,22 +66,22 @@
     font-size: 18px;
 }
 .offerCard > .conditions > .condition > span:nth-child(3) {
-    color: #898989;
+    color: #e7e7e7;
     font-size: 11px;
 }
 
 .offerCard > .buttons {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 8px;
-    width: 330px;
+    grid-column-gap: 16px;
+    width: 360px;
 }
 
 .offerCard > .buttons > .button  {
     margin: 0;
     color: white;
     font-size: 14px;
-    height: 30px;
+    height: 40px;
     border-radius: 5px;
 }
 
