--- a/src/components/Reviews/style.css
+++ b/src/components/Reviews/style.css
@@ -81,7 +81,7 @@
         height: 40px;
         width: 200px;
         border-radius: 8px;
-        background: var(--blue);
+        background: var(--detail);
         color: white;
         font-family: "OpenSans", sans-serif;
         display: flex;
@@ -90,14 +90,14 @@
         cursor: pointer;
         font-size: 18px;
         font-style: italic;
-        border: 0.2px solid var(--blue);
+        border: 0.2px solid var(--detail);
         float: right;
     }
 
     .success_msg {
         float: right;
         margin-top: 8px;
-        color: var(--green);
+        color: var(--back);
     }
 
     #rating {
@@ -205,7 +205,7 @@
         height: 40px;
         width: 90%;
         border-radius: 8px;
-        background: var(--blue);
+        background: var(--detail);
         color: white;
         font-family: "OpenSans", sans-serif;
         display: flex;
@@ -214,14 +214,14 @@
         cursor: pointer;
         font-size: 18px;
         font-style: italic;
-        border: 0.2px solid var(--blue);
+        border: 0.2px solid var(--detail);
         float: right;
     }
 
     .success_msg {
         float: right;
         margin-top: 8px;
-        color: var(--green);
+        color: var(--back);
     }
 
 
