--- a/src/components/CardOfferList/style.css
+++ b/src/components/CardOfferList/style.css
@@ -1,7 +1,7 @@
 
 @media screen and (min-width: 901px){
     .card_offer_list {
-        padding: 24px var(--offset);
+        padding: 24px calc(var(--offset)*2);
     }
 }
 
