--- a/src/components/style.css
+++ b/src/components/style.css
@@ -33,7 +33,7 @@
 
     .dialog_msg > .button_wrapper > .button{
         text-decoration: none;
-        background: var(--green);
+        background: var(--back);
         border: none;
         color: white;
         width: 110px;
@@ -73,8 +73,8 @@
         font-family: "OpenSans", sans-serif;
         display: flex;
         align-items: center;
-        background: var(--blue);
-        border: 0.2px solid var(--blue);
+        background: var(--detail);
+        border: 0.2px solid var(--detail);
         justify-content: center;
         margin-left: 24px;
         cursor: pointer;
@@ -175,7 +175,7 @@
         box-shadow: 0 0 10px -8px grey;
         display: flex;
         align-items: center;
-        margin: 0 0 16px 0;
+        margin: 0 0 24px 0;
     }
 
     .filter > span {
@@ -232,30 +232,30 @@
 
     .offer > .wrapper > div > span:first-child {
         font-style: italic;
-        color: #535353;
+        color: #212121;
         font-size: 14px;
         margin: 0.5px 0;
     }
 
     .offer > .wrapper > div:first-child > span:last-child {
         font-family: "Ubuntu", sans-serif;
-        color: #535353;
+        color: #212121;
         font-size: 18px;
         font-style: normal;
     }
 
     .offer > .wrapper.badOffer > div:nth-child(2) > span:last-child {
-        color: #535353;
+        color: #212121;
     }
     .offer > .wrapper > div:nth-child(2) > span:last-child {
         font-family: "Ubuntu", sans-serif;
-        color: var(--green);
+        color: var(--back);
         font-size: 18px;
         font-style: normal;
     }
 
     .offer > .wrapper > div > span:last-child {
-        color: #535353;
+        color: #212121;
         font-style: italic;
         font-size: 14px;
         margin: 0.5px 0;
@@ -288,7 +288,7 @@
     .wrapper > .buttons > .button {
         width: 100%;
         height: 32px;
-        background: var(--green);
+        background: var(--back);
         border: none;
         box-sizing: border-box;
         margin: 0 auto 0 auto;
@@ -410,7 +410,7 @@
         margin: 0;
         font-family: 'Quicksand', sans-serif;
         text-align: center;
-        color: var(--green);
+        color: var(--back);
     }
     .page404 > .content > .links {
         display: flex;
@@ -437,8 +437,8 @@
         float: left;
         border-radius: 8px;
         font-family: "OpenSans", sans-serif;
-        border: 0.2px solid var(--blue);
-        background: var(--blue);
+        border: 0.2px solid var(--detail);
+        background: var(--detail);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -584,29 +584,29 @@
 
     .offer > .wrapper > div > span:first-child {
         font-style: italic;
-        color: #535353;
+        color: #212121;
         font-size: 10px;
         margin: 0.5px 0;
     }
 
     .offer > .wrapper > div:first-child > span:last-child {
         font-family: "Ubuntu", sans-serif;
-        color: #535353;
+        color: #212121;
         font-size: 10px;
         font-style: normal;
     }
     .offer > .wrapper.badOffer > div:nth-child(2) > span:last-child {
-        color: #535353;
+        color: #212121;
     }
     .offer > .wrapper > div:nth-child(2) > span:last-child {
         font-family: "Ubuntu", sans-serif;
-        color: var(--green);
+        color: var(--back);
         font-size: 12px;
         font-style: normal;
     }
 
     .offer > .wrapper > div > span:last-child {
-        color: #535353;
+        color: #212121;
         font-style: italic;
         font-size: 10px;
         margin: 0.5px 0;
@@ -746,7 +746,7 @@
         margin: 0;
         font-family: 'Quicksand', sans-serif;
         text-align: center;
-        color: var(--green);
+        color: var(--back);
     }
     .page404 > .content > .links {
         display: flex;
@@ -781,7 +781,7 @@
     .wrapper > .buttons > .button {
         width: 100%;
         height: 25px;
-        background: var(--green);
+        background: var(--back);
         border: none!important;
         box-sizing: border-box;
         margin: 0 auto 0 auto;
@@ -831,7 +831,7 @@
 
     .dialog_msg > .button_wrapper > .button{
         text-decoration: none;
-        background: var(--green);
+        background: var(--back);
         border: none;
         color: white;
         width: 110px;
