--- a/src/pages/OfferDetails/style.css
+++ b/src/pages/OfferDetails/style.css
@@ -65,7 +65,7 @@
         width: 185px;
         height: 48px;
         position: absolute;
-        background: var(--green);
+        background: var(--back);
         border: none;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
@@ -182,7 +182,7 @@
         width: 160px;
         height: 32px;
         position: absolute;
-        background: var(--green);
+        background: var(--back);
         border: none;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
