--- a/src/components/style.css
+++ b/src/components/style.css
@@ -4,8 +4,8 @@
         width: 300px;
         height: 125px;
         position: fixed;
-        top: 64px;
-        left: 48px;
+        top: 60px;
+        right: var(--offset);
         background: white;
         border-radius: 5px;
         box-shadow: 0 0 7px -2px black;
@@ -372,24 +372,7 @@
         height: 400px;
     }
 
-    .pageLoader {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #f5f5f5;
-        transition: 500ms;
-    }
 
-    .pageLoader > .loader {
-        width: 256px;
-        height: 23px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-    }
 
     .page404 > .content {
         width: 600px;
@@ -719,24 +702,6 @@
         height: 400px;
     }
 
-    .pageLoader {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #f5f5f5;
-        transition: 500ms;
-    }
-
-    .pageLoader > .loader {
-        width: 256px;
-        height: 23px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-    }
     .page404 > .content > img {
         display: block;
         margin: 0 auto;
