--- a/src/components/style.css
+++ b/src/components/style.css
@@ -68,6 +68,7 @@
     }
 
     .button {
+        text-decoration: none;
         float: left;
         border-radius: 8px;
         font-family: "OpenSans", sans-serif;
